page graph créer, 1er highcharts en constr

--- a/index.html
+++ b/index.html
@@ -2,30 +2,49 @@
 <html lang="fr">
 <html>
     <head>
+        <meta charset="UTF-8">
         <link rel="stylesheet" href="./css/style.css">
+        <title>Next Step</title>
     </head>
     <body>
-        <div class="my_navbar">
-            <img src='' class="logo" alt="logo">
+        <div >
+            <nav class="my_navbar">
+                <img src='' class="logo" alt="logo">
+                <div class="button">
+                    Accueil
+                </div>
+                <div class="button" href ="graph.html">
+                    Graphique
+                </div>
+                <div>
+                    <input type="search" class="light-table-filter" data-table="table-info" placeholder="Filter/Search">
+                </div>
+            </nav>
         </div>
-        <div class="corpse">
-            <div class="presentation">
-                <h1>Présentation de notre projet</h1>
-                <p>
-                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quis, quidem. Error, quam voluptate temporibus optio ratione assumenda alias eligendi harum quis placeat fugit iusto dolore. Iure maxime expedita ducimus modi.
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ad beatae odio modi? Quisquam tempora est quos minus ipsam ducimus consequuntur! Itaque minima distinctio magnam cumque id omnis fugit totam earum?
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore earum repellendus similique, eius vel iure tempora id fugiat corrupti, accusantium, obcaecati consectetur. Dignissimos consequatur unde ducimus rem illum beatae praesentium.
-                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Beatae cumque, consequatur corporis enim distinctio harum excepturi. Commodi labore dolore explicabo et illum veniam rem, cum, ratione, repellat eaque non! Praesentium.
-                    Lorem ipsum dolor sit amet consectetur, adipisicing elit. Quis, quidem. Error, quam voluptate temporibus optio ratione assumenda alias eligendi harum quis placeat fugit iusto dolore. Iure maxime expedita ducimus modi.
-                    Lorem ipsum dolor sit, amet consectetur adipisicing elit. Ad beatae odio modi? Quisquam tempora est quos minus ipsam ducimus consequuntur! Itaque minima distinctio magnam cumque id omnis fugit totam earum?
-                    Lorem ipsum dolor sit amet consectetur adipisicing elit. Labore earum repellendus similique, eius vel iure tempora id fugiat corrupti, accusantium, obcaecati consectetur. Dignissimos consequatur unde ducimus rem illum beatae praesentium.
-                    Lorem ipsum, dolor sit amet consectetur adipisicing elit. Beatae cumque, consequatur corporis enim distinctio harum excepturi. Commodi labore dolore explicabo et illum veniam rem, cum, ratione, repellat eaque non! Praesentium.
-                </p>
+        <div id='my_main_contain'>
+            <div class="title">
+                <h1>Prochaine sortie</h1>
+            </div>
+            <div class="corpse">
+                <div class="presentation">
+                    <h2>Présentation de notre projet</h2>
+                    <p>
+                        
+                    </p>
+                </div>
+                <div class="table">
+                    
+                    <table class = "table-info table">
+
+                    </table>
+                </div>
             </div>
         </div>  
         <div class="foot">
 
         </div>
+
+        <script  src="./js/java.js"></script>
     </body>
 
 </html>
