--- a/html/table.html
+++ b/html/table.html
@@ -1,6 +1,6 @@
 <head>
-  <link rel="stylesheet" href="./css/table.css">
-  <link rel="stylesheet" href="./css/research.css">
+  <link rel="stylesheet" href="../css/table.css">
+  <link rel="stylesheet" href="../css/research.css">
 </head>
 <input type="search" class="light-table-filter" data-table="table-info">
 <div class="tbl-header">
@@ -950,5 +950,5 @@
       </tr>
     </tbody>
   </table>
-  <script src="./js/java.js"></script>
+  <script src="../js/java.js"></script>
 </div>
