--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
                 <a href='./index.html'>Accueil</a>
             </div>
             <div class="button">
-                <a href="./graph.html">Graphique</a>
+                <a href="html/graph.html">Graphique</a>
             </div>
         </nav>
     </div>
@@ -27,7 +27,7 @@
         </div>
         <div class="corpse">
             <div class="table">
-                <iframe class="tbl-header" src ='./table.html' width="80%" height="500"></iframe>
+                <iframe class="tbl-header" src ='html/table.html' width="80%" height="500"></iframe>
             </div>
         </div>
     </div>
