--- a/html/graph.html
+++ b/html/graph.html
@@ -3,8 +3,8 @@
 <html>
     <head>
         <meta charset="UTF-8">
-        <link rel="stylesheet" href="./css/style_graph.css">
-        <link rel="stylesheet" href="./css/style.css">
+        <link rel="stylesheet" href="../css/style_graph.css">
+        <link rel="stylesheet" href="../css/style.css">
         <title>Next Step</title>
     </head>
     <body>
@@ -65,7 +65,7 @@
         <script src="https://code.highcharts.com/modules/export-data.js"></script>
         <script src="https://code.highcharts.com/modules/accessibility.js"></script>
 
-        <script  src="js/graph.js"></script>
+        <script  src="../js/graph.js"></script>
     </body>
 
 </html>
