mise à jour du lien heroku

--- a/html/graph.html
+++ b/html/graph.html
@@ -12,7 +12,7 @@
             <nav class="my_navbar">
                 <img src='' class="logo" alt="logo">
                 <div class="button">
-                    <a href='./index.html'>Accueil</a>
+                    <a href='../index.html'>Accueil</a>
                 </div>
                 <div class="button">
                     <a href="./graph.html">Graphique</a>
