Maj de la mise en page du front

--- a/html/graph.html
+++ b/html/graph.html
@@ -3,6 +3,7 @@
 <html>
     <head>
         <meta charset="UTF-8">
+        <link rel="icon" href="https://www.flaticon.com/svg/static/icons/svg/2797/2797843.svg">
         <link rel="stylesheet" href="../css/style_graph.css">
         <link rel="stylesheet" href="../css/style.css">
         <title>Next Step</title>
@@ -10,7 +11,7 @@
     <body>
         <div >
             <nav class="my_navbar">
-                <img src='' class="logo" alt="logo">
+                <img src='https://www.flaticon.com/svg/static/icons/svg/3570/3570342.svg' class="logo" alt="logo">
                 <div class="button">
                     <a href='../index.html'>Accueil</a>
                 </div>
@@ -44,7 +45,13 @@
             </figure>
         </div>
         <div class="foot">
-
+            <div class="footer">                
+                <div class="footer-copyright">
+                    <small class="text-muted">
+                        <div>Icons made by <a href="https://www.flaticon.com/authors/iconixar" title="iconixar">iconixar</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div>        
+                    </small> 
+                </div>
+            </div>
         </div>
         <script src="https://code.highcharts.com/highcharts.js"></script>
         <script src="https://code.highcharts.com/modules/data.js"></script>
