--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
 
 <head>
     <meta charset="UTF-8">
+    <link rel="icon" href="https://www.flaticon.com/svg/static/icons/svg/2797/2797843.svg">
     <link rel="stylesheet" href="./css/style.css">
     <link rel="stylesheet" href="./css/research.css">
     <title>Next Step</title>
@@ -12,7 +13,7 @@
 <body>
     <div>
         <nav class="my_navbar">
-            <img src='' class="logo" alt="logo">
+            <img src='https://www.flaticon.com/svg/static/icons/svg/3570/3570342.svg' class="logo" alt="logo">
             <div class="button">
                 <a href='./index.html'>Accueil</a>
             </div>
@@ -27,14 +28,20 @@
         </div>
         <div class="corpse">
             <div class="table">
-                <iframe class="tbl-header" src ='html/table.html' width="80%" height="500"></iframe>
+                <iframe class="tbl-header" src ='html/table.html' width="90%" height="500"></iframe>
             </div>
+            <p>Aprerçu de notre Api</p>
         </div>
     </div>
     <div class="foot">
-
+        <div class="footer">                
+            <div class="footer-copyright">
+                <small class="text-muted">
+                    <div>Icons made by <a href="https://www.flaticon.com/authors/iconixar" title="iconixar">iconixar</a> from <a href="https://www.flaticon.com/" title="Flaticon">www.flaticon.com</a></div>        
+                </small> 
+            </div>
+        </div>
     </div>
-
     <script src="./js/java.js"></script>
 </body>
 
